crates/pcbc/tests/snapshots/simple__git_fixture.snap
---
source: crates/pcbc/tests/simple.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (2 components)
