crates/pcbc/tests/snapshots/simple__help.snap
---
source: crates/pcbc/tests/simple.rs
expression: output
---
Command: pcbc help
Exit Code: 0

--- STDOUT ---
PCB tool with build and layout capabilities

Usage: pcbc [OPTIONS] <COMMAND>

Commands:
  auth        Manage authentication
  build       Build PCB projects
  apply       Apply a Zener design to its linked KiCad project
  test        Run tests in .zen files
  migrate     Migrate PCB projects
  mod         Manage package dependency manifests
  add         Add or update a direct dependency
  sync        Reconcile source imports and hydrate package dependency manifests
  list        List package dependency information
  new         Create a new board, package, or component
  update      Update dependencies to latest compatible versions
  bom         Generate Bill of Materials (BOM)
  info        Display workspace and board information
  import      Import a KiCad schematic or project into a Zener board repository
  layout      Layout PCB designs
  dfm         Run DFM checks for a .zen board
  fmt         Format .zen files
  open        Open PCB layout files
  publish     Publish packages and boards by creating version tags
  fork        Reserved subcommand for future use
  embed-step  Embed a STEP model into a KiCad footprint
  scan        Scan datasheets from local PDFs or URLs
  component   Access the component API
  search      Search for electronic components
  simulate    Run SPICE simulations
  ipc2581     IPC-2581 parser and inspection tool
  gerber      Gerber X2 parser and rendering tool
  step        Export a KiCad board to STEP without kicad-cli
  help        Print this message or the help of the given subcommand(s)

Options:
      --accuracy-um <ACCURACY_UM>  Geometry approximation budget in whole micrometres (1–100).
                                   Applies to IPC-2581 geometry, Gerber operations, and release
                                   HTML. DFM stays at 10 µm; copper balancing stays at 50 µm. Does
                                   not control KiCad exports, interposer generation, or external
                                   commands [default: 10]
  -h, --help                       Print help
  -V, --version                    Print version
--- STDERR ---
