crates/pcbc/tests/snapshots/simple__simple_workspace_build.snap
---
source: crates/pcbc/tests/simple.rs
assertion_line: 179
expression: output
---
Command: pcbc build boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: io() 'GND' in module 'LED1' is not connected to any ports
    ╭─[ <TEMP_DIR>/boards/modules/LedModule.zen:12:7 ]
 12 │GND = io(Ground)
    │           ╰───── io() 'GND' in module 'LED1' is not connected to any ports

✓ TestBoard.zen (10 components)
